# SCVD

./: .env  .gitignore  README.md  dataset.py  main.py  preprocess.py  pyproject.toml
helpers/: joern.py
scripts/: joern_dfa.py  test_compilation.py  test_joern_dot.py
src/: __init__.py  dataset.py  environment.py  graphml.py  joern.py  model.py  preprocess.py  utils.py
src/datasets/: __init__.py  diff.py  function.py  graph.py
src/models/: codebert.py  graph.py
test/: test_dataloader.py
tests/: test_dataloader.py
tests/graphs/: conf_pytest.py  create_graphs.py  test_graphs.py
